# GeometricAlgorithms

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/base/: CMakeLists.txt  core.cpp  core.h  vec.cpp  vec.h
src/geometry/: CMakeLists.txt  geoutils.cpp  geoutils.h  intersection.cpp  intersection.h
src/primitives/: CMakeLists.txt  line.cpp  line.h  plane.cpp  plane.h  point.cpp  point.h
tests/: CMakeLists.txt  test_hello_world.cpp  test_vector.cpp
tests/base/: test_core.cpp  test_vector.cpp
tests/geometry/: test_geo_utils.cpp  test_intersection.cpp
tests/primitives/: test_plane.cpp  test_point.cpp
